--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node index.js",
-    "cypress:open": "cypress open"
+    "dev:kill": "kill-port --port 8022",
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
   },
   "homepage": "https://github.com/PilulkaDistribuce/cypress-boilerplate#readme",
   "dependencies": {
-    "cypress": "^3.3.1",
-    "express": "^4.17.1"
+    "cypress": "3.4.1",
+    "express": "4.17.1",
+    "kill-port": "1.6.0"
   }
 }
